feat: resolve some sonar issues